--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -1,3 +1,14 @@
-.Phonetic {
-  text-align: left;
+.Phonetic button {
+  background-color: white;
+  color: #94b49f;
+
+  border-radius: 50%;
+  padding: 6px 8px 5px 8px;
+  margin-right: 10px;
+  border: 1px solid #94b49f;
+  transition: all 3ms ease-out;
+}
+.Phonetic button:hover {
+  background-color: #94b49f;
+  color: white;
 }
