--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,12 @@
   margin-top: 100px;
   text-align: center;
 }
+
+@media (max-width: 767px) {
+  .App {
+    padding: 20px;
+  }
+  .App footer {
+    margin-top: 50px;
+  }
+}
