--- a/src/Data.css
+++ b/src/Data.css
@@ -17,3 +17,15 @@
 .Data .phonetics-block {
   display: flex;
 }
+
+@media (max-width: 767px) {
+  .Data .header {
+    margin-top: 30px;
+  }
+  .Data .header h3 {
+    font-size: 28px;
+  }
+  .Data .phonetics-block {
+    flex-direction: column;
+  }
+}
